--- a/RealEstate.Business/RealEstate.Business.csproj
+++ b/RealEstate.Business/RealEstate.Business.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Configs\" />
     <Folder Include="DTOs\" />
     <Folder Include="DTOs\ResponseDtos\" />
   </ItemGroup>
