Add DTO classes for property and inquiry management, including validation attributes

--- a/RealEstate.Business/RealEstate.Business.csproj
+++ b/RealEstate.Business/RealEstate.Business.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Abstract\" />
+    <Folder Include="Concrete\" />
     <Folder Include="Configs\" />
     <Folder Include="DTOs\" />
     <Folder Include="DTOs\ResponseDtos\" />
