Add mapping profiles and validators for property and inquiry DTOs

--- a/RealEstate.Business/RealEstate.Business.csproj
+++ b/RealEstate.Business/RealEstate.Business.csproj
@@ -16,6 +16,7 @@
     <Folder Include="Configs\" />
     <Folder Include="DTOs\" />
     <Folder Include="DTOs\ResponseDtos\" />
+    <Folder Include="Mapping\" />
   </ItemGroup>
 
   <PropertyGroup>
