Add exception handling middleware and custom exception classes for better error management

--- a/RealEstate.API/RealEstate.API.csproj
+++ b/RealEstate.API/RealEstate.API.csproj
@@ -18,4 +18,9 @@
     <ProjectReference Include="..\RealEstate.Business\RealEstate.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Filters\" />
+    <Folder Include="Middleware\" />
+  </ItemGroup>
+
 </Project>
